fix user index being too big

--- a/app/assets/stylesheets/fullscreen_popup.scss
+++ b/app/assets/stylesheets/fullscreen_popup.scss
@@ -221,7 +221,7 @@
 .fullscreen-index-list-container-users {
   overflow-y: auto;
   overflow-x: hidden;
-  height: calc(100% - 214px);
+  height: calc(100% - 264px);
 }
 
 .fullscreen-index-list-container-sidebar {
